--- a/elements.html
+++ b/elements.html
@@ -1,3 +1,8 @@
+<html>
+<head>
+	<title>Element*</title>
+</head>
+<body>
 <h1> heading 1</h1>
 <h2> heading 2</h2>
 <p> this is my first paragraph</p>
@@ -12,3 +17,6 @@
 </div>
 
 <p>Hello Hi it's me:<br>Adele</p>
+<img src="test.jpg">
+</body>
+</html>
