--- a/elements.html
+++ b/elements.html
@@ -3,9 +3,9 @@
 	<title>Element*</title>
 </head>
 <body>
-<h1> heading 1</h1>
-<h2> heading 2</h2>
-<p> this is my first paragraph</p>
+<h1 style="color: blue; text-decoration: strikethrough"> Bro Code</h1>
+<h2> Friend zoned</h2>
+<p> your crush is married maybe</p>
 <div>
 	<div>
 		<div>
