--- a/elements.html
+++ b/elements.html
@@ -3,7 +3,7 @@
 	<title>Element*</title>
 </head>
 <body>
-<h1 style="color: blue; text-decoration: strikethrough"> Bro Code</h1>
+<h1 style="color: blue; text-decoration: underline"> Bro Code</h1>
 <h2> Friend zoned</h2>
 <p> your crush is married maybe</p>
 <div>
